create easy web_rtc with django channels and pure js

--- a/src/blog/templates/blog/main.html
+++ b/src/blog/templates/blog/main.html
@@ -1,5 +1,6 @@
 {% extends 'layout/main.html' %}
-{% load static sass_tags blog_tags %}
+{% load static sass_tags %}
+
 
 {% block headTags %}
     <link href="{% sass_src 'blog/css/main.scss' %}" rel="stylesheet" type="text/css"/>
