--- a/static/shared/css/main.scss
+++ b/static/shared/css/main.scss
@@ -1,9 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-size: 16px;
   color: #0a1d49;
   background-color: #eff5ff;
   font-family: 'Roboto', 'Montserrat', sans-serif;
+
 }
 
 .main-content {
@@ -77,82 +82,87 @@ a:hover, a:active, a:focus {
   font-family: 'Montserrat', sans-serif;
   max-width: 500px;
   margin: auto;
-  .form-title {
-    font-size: 30px;
-    text-align: center;
-    font-weight: 800;
-    margin-bottom: 30px;
-  }
-  .form-field {
-    margin: 20px auto 0;
-    .form-label {
-      display: block;
-      font-weight: 500;
-      margin-bottom: 4px;
-    }
-
-    input[type='text'], select, input[type='password'] {
-      height: 42px;
-      font-size: 18px;
-    }
-
-    input[type='text'], input[type='password'], textarea, select {
-      background-color: #f8f8f873;
-      border: 2px solid #7845ac;
-      border-radius: 10px;
-      min-width: 280px;
-      padding: 0 20px;
-      &:focus, &:active, &:hover {
-        border-color: #4d1a7c;
-      }
-    }
-
-    textarea {
-      font-size: 18px;
-      padding: 20px;
-    }
-
-    input[type='file']::file-selector-button {
-      background-color: #7845ac;
-      color: white;
-      border: none;
-      transition: background-color .2s ease-in;
-      border-radius: 4px;
-      padding: 4px 10px;
-      cursor: pointer;
-      &:focus, &:active, &:hover {
-        border: none;
-        background-color: #4d1a7c;
-      }
-    }
-
-    input[type='checkbox'] {
-      margin-top: 8px;
-      transform: scale(2);
-      accent-color: #7845ac;
-      padding: 10px;
-    }
-
-  }
-
   .custom-button {
-      display: block;
-      margin: 30px auto 0;
-      width: 100%;
-    }
-  .form-error {
-    color: red;
-    font-size: 14px;
-    font-weight: 500;
-    .errorlist {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
+    display: block;
+    margin: 30px auto 0;
+    width: 100%;
   }
-  .form-error.non-field-errors {
-    font-size: 16px;
-    margin: 30px;
+}
+
+input {
+  box-sizing: border-box;
+}
+
+.form-title {
+  font-size: 30px;
+  text-align: center;
+  font-weight: 800;
+  margin-bottom: 30px;
+}
+.form-field {
+  margin: 20px auto 0;
+  .form-label {
+    display: block;
+    font-weight: 500;
+    margin-bottom: 4px;
   }
 
+  input[type='text'], select, input[type='password'] {
+    height: 42px;
+    font-size: 18px;
+  }
+
+  input[type='text'], input[type='password'], textarea, select {
+    background-color: #f8f8f873;
+    border: 2px solid #7845ac;
+    border-radius: 10px;
+    min-width: 280px;
+    padding: 0 20px;
+    &:focus, &:active, &:hover {
+      border-color: #4d1a7c;
+    }
+  }
+
+  textarea {
+    font-size: 18px;
+    padding: 20px;
+  }
+
+  input[type='file']::file-selector-button {
+    background-color: #7845ac;
+    color: white;
+    border: none;
+    transition: background-color .2s ease-in;
+    border-radius: 4px;
+    padding: 4px 10px;
+    cursor: pointer;
+    &:focus, &:active, &:hover {
+      border: none;
+      background-color: #4d1a7c;
+    }
+  }
+
+  input[type='checkbox'] {
+    margin-top: 8px;
+    transform: scale(2);
+    accent-color: #7845ac;
+    padding: 10px;
+  }
+
+}
+
+
+.form-error {
+  color: red;
+  font-size: 14px;
+  font-weight: 500;
+  .errorlist {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+}
+.form-error.non-field-errors {
+  font-size: 16px;
+  margin: 30px;
 }
