--- a/templates/layout/main.html
+++ b/templates/layout/main.html
@@ -7,6 +7,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="{% static 'shared/images/logo1.png' %}" type="image/png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;800&display=swap" rel="stylesheet">
@@ -29,4 +30,7 @@
         {% include 'layout/footer.html' %}
     {% endblock footer %}
 </body>
+
+{% block scripts %}{% endblock scripts %}
+
 </html>
