add userProfile module and editUser page, add to userProfile avatar field

--- a/src/web_rtc/templates/web_rtc/web_rtc.html
+++ b/src/web_rtc/templates/web_rtc/web_rtc.html
@@ -93,4 +93,9 @@
 
 {% block scripts %}
     <script src="{% static 'web_rtc/js/web_rtc.js' %}"></script>
+    <script>
+        {% if user.username %}
+            login('{{ user.username }}')
+        {% endif %}
+    </script>
 {% endblock scripts %}
