--- a/src/shared_auth/templates/shared/login.html
+++ b/src/shared_auth/templates/shared/login.html
@@ -1,25 +1,19 @@
-{% extends 'layout/main.html' %}
+{% extends 'shared/main.html' %}
 
-{% block pageTitle %} {{ title }} {% endblock %}
+{% block shared_auth_content %}
+    <form class="custom-form" method="post">
+        {% csrf_token %}
+        <div class="form-title">Login</div>
+        <div class="form-error non-field-errors">{{ form.non_field_errors }}</div>
+        {% for f in form %}
+            <div class="form-field">
+                <label class="form-label" for="{{ f.id_for_label }}">{{ f.label }}</label>
+                {{ f }}
+                <div class="form-error">{{ f.errors }}</div>
+            </div>
+        {% endfor %}
 
-
-{% block content %}
-    <div class="main-container">
-        <form class="custom-form" method="post">
-            {% csrf_token %}
-            <div class="form-title">Login</div>
-            <div class="form-error non-field-errors">{{ form.non_field_errors }}</div>
-            {% for f in form %}
-                <div class="form-field">
-                    <label class="form-label" for="{{ f.id_for_label }}">{{ f.label }}</label>
-                    {{ f }}
-                    <div class="form-error">{{ f.errors }}</div>
-                </div>
-            {% endfor %}
-
-            <button class="custom-button" type="submit"> Login </button>
-        </form>
-    </div>
-
-{% endblock content %}
+        <button class="custom-button" type="submit"> Login </button>
+    </form>
+{% endblock shared_auth_content %}
 
