--- a/static/shared/css/header.css
+++ b/static/shared/css/header.css
@@ -9,21 +9,61 @@
     width: 100%; }
     .header .main-content > div {
       display: flex;
-      align-self: center; }
-  .header .navigation > div, .header .auth-header-info {
+      align-self: center;
+      align-items: center; }
+    .header .main-content .auth-header-info {
+      font-size: 18px;
+      margin: 0; }
+      .header .main-content .auth-header-info a {
+        padding: 0 10px; }
+    .header .main-content .auth-header-login-info {
+      font-size: 18px;
+      flex-direction: column;
+      align-self: start;
+      margin: 10px 0 0; }
+      .header .main-content .auth-header-login-info label {
+        cursor: pointer; }
+  .header .navigation > div, .header .auth-header-info, .header .auth-header-login-info {
     margin-left: 30px;
     margin-right: 30px;
     font-weight: bold;
     font-size: 24px; }
-    .header .navigation > div a, .header .auth-header-info a {
+    .header .navigation > div a, .header .auth-header-info a, .header .auth-header-login-info a {
       text-decoration: none;
       color: #0a1d49;
       transition: all .1s ease-out; }
-    .header .navigation > div a:focus, .header .navigation > div a:hover, .header .navigation > div a:active, .header .auth-header-info a:focus, .header .auth-header-info a:hover, .header .auth-header-info a:active {
+    .header .navigation > div a:focus, .header .navigation > div a:hover, .header .navigation > div a:active, .header .auth-header-info a:focus, .header .auth-header-info a:hover, .header .auth-header-info a:active, .header .auth-header-login-info a:focus, .header .auth-header-login-info a:hover, .header .auth-header-login-info a:active {
       color: #223d7c; }
-  .header .auth-header-info {
-    font-size: 18px; }
-    .header .auth-header-info a {
-      padding: 0 10px; }
+  .header .header-user-menu-drop-down {
+    clear: both;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    text-align: left;
+    list-style: none;
+    transition: height .4s ease;
+    background-color: #c5e1f8;
+    padding-left: 20px;
+    margin: 12px 0 0;
+    padding-right: 20px;
+    z-index: 1; }
+  .header .header-user-menu-drop-down li {
+    font-size: 14px;
+    margin: 20px 0; }
+    .header .header-user-menu-drop-down li a {
+      padding: 0; }
+  .header #header-user-menu {
+    position: absolute;
+    opacity: 0;
+    height: 0; }
+    .header #header-user-menu:checked + .header-user-menu-drop-down {
+      height: auto;
+      border-top: 2px solid; }
+  .header .header-user-info {
+    text-align: center; }
+    .header .header-user-info .header-avatar img {
+      border-radius: 50%;
+      width: 50px;
+      height: 50px; }
 
 /*# sourceMappingURL=header.css.map */
