--- a/static/shared/css/header.scss
+++ b/static/shared/css/header.scss
@@ -10,10 +10,27 @@
     >div {
       display: flex;
       align-self: center;
+      align-items: center;
+    }
+    .auth-header-info {
+      font-size: 18px;
+      margin: 0;
+      a {
+        padding: 0 10px;
+      }
+    }
+    .auth-header-login-info {
+      font-size: 18px;
+      flex-direction: column;
+      align-self: start;
+      margin: 10px 0 0;
+      label {
+        cursor: pointer;
+      }
     }
   }
 
-  .navigation >div, .auth-header-info {
+  .navigation >div, .auth-header-info, .auth-header-login-info {
     margin-left: 30px;
     margin-right: 30px;
     font-weight: bold;
@@ -28,11 +45,50 @@
     }
   }
 
-  .auth-header-info {
-    font-size: 18px;
 
+
+  .header-user-menu-drop-down {
+    clear: both;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    text-align: left;
+    list-style: none;
+    transition: height .4s ease;
+    background-color: #c5e1f8;
+    padding-left: 20px;
+    margin: 12px 0 0;
+    padding-right: 20px;
+    z-index: 1;
+  }
+
+  .header-user-menu-drop-down li {
     a {
-      padding: 0 10px;
+      padding: 0;
+    }
+    font-size: 14px;
+    margin : 20px 0;
+  }
+
+  #header-user-menu {
+    position: absolute;
+    opacity: 0;
+    height: 0;
+    &:checked + .header-user-menu-drop-down {
+      height: auto;
+      border-top: 2px solid;
     }
   }
+
+  .header-user-info {
+    text-align: center;
+    .header-avatar {
+      img {
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+      }
+    }
+  }
+
 }
