--- a/static/shared/css/main.css
+++ b/static/shared/css/main.css
@@ -86,16 +86,17 @@ input {
     display: block;
     font-weight: 500;
     margin-bottom: 4px; }
-  .form-field input[type='text'], .form-field select, .form-field input[type='password'] {
+  .form-field input[type='text'], .form-field input[type='email'], .form-field input[type='password'], .form-field select {
     height: 42px;
     font-size: 18px; }
-  .form-field input[type='text'], .form-field input[type='password'], .form-field textarea, .form-field select {
+  .form-field input[type='text'], .form-field input[type='email'], .form-field input[type='password'], .form-field textarea, .form-field select {
     background-color: #f8f8f873;
     border: 2px solid #7845ac;
     border-radius: 10px;
     min-width: 280px;
+    width: 100%;
     padding: 0 20px; }
-    .form-field input[type='text']:focus, .form-field input[type='text']:active, .form-field input[type='text']:hover, .form-field input[type='password']:focus, .form-field input[type='password']:active, .form-field input[type='password']:hover, .form-field textarea:focus, .form-field textarea:active, .form-field textarea:hover, .form-field select:focus, .form-field select:active, .form-field select:hover {
+    .form-field input[type='text']:focus, .form-field input[type='text']:active, .form-field input[type='text']:hover, .form-field input[type='email']:focus, .form-field input[type='email']:active, .form-field input[type='email']:hover, .form-field input[type='password']:focus, .form-field input[type='password']:active, .form-field input[type='password']:hover, .form-field textarea:focus, .form-field textarea:active, .form-field textarea:hover, .form-field select:focus, .form-field select:active, .form-field select:hover {
       border-color: #4d1a7c; }
   .form-field textarea {
     font-size: 18px;
