pass user avatar on web_rtc call if it exist

--- a/src/shared_auth/static/shared_auth/css/shared_auth.scss
+++ b/src/shared_auth/static/shared_auth/css/shared_auth.scss
@@ -5,6 +5,7 @@
       width: 150px;
       height: 150px;
       border: 3px solid #7845ac;
+      object-fit: cover;
     }
   }
   .avatar-label {
