--- a/src/shared_auth/templates/shared/edit_user.html
+++ b/src/shared_auth/templates/shared/edit_user.html
@@ -42,19 +42,16 @@
     <script>
         document.getElementById('id_avatar').addEventListener('change', function () {
         var preview = document.getElementById('image-preview');
-        var fileInput = document.getElementById('id_avatar');
-        var file = fileInput.files[0];
+        var fileInput = document.getElementById('id_avatar').files[0];
 
-        if (file) {
+        if (fileInput) {
             var reader = new FileReader();
 
             reader.onload = function (e) {
                 preview.src = e.target.result;
             };
 
-            reader.readAsDataURL(file);
-        } else {
-            preview.src = "{% static 'images/default_image.png' %}";
+            reader.readAsDataURL(fileInput);
         }
     });
     </script>
