--- a/static/shared/css/header.css
+++ b/static/shared/css/header.css
@@ -64,6 +64,7 @@
     .header .header-user-info .header-avatar img {
       border-radius: 50%;
       width: 50px;
-      height: 50px; }
+      height: 50px;
+      object-fit: cover; }
 
 /*# sourceMappingURL=header.css.map */
