--- a/src/chat/static/chat/css/chat.scss
+++ b/src/chat/static/chat/css/chat.scss
@@ -5,19 +5,63 @@
   display: flex;
   align-items: self-start;
 }
-.room-info, .chat {
+.room-info, .chat, .chat-info {
   margin: 30px;
   border-radius: 30px;
   background-color: #f8f8f873;
   font-family: 'Montserrat', sans-serif;
   border: 4px solid rgba(120, 69, 172, 0.2);
 }
+.text-center{
+  text-align: center;
+}
+.chat-info {
+  max-width: 500px;
+  width: 500px;
+}
+.chat-info-row {
+  margin: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  >div {
+    display: flex;
+    align-items: center;
+    img {
+      height: 25px;
+      cursor: pointer;
+    }
+  }
+}
 
+.bold {
+  font-weight: 800;
+}
+.m-l-5 {
+  margin-left: 5px;
+}
+.pointer {
+  cursor: pointer;
+}
 .room-info .room-info-row {
   margin: 20px;
-  div:last-of-type {
-    font-weight: 800;
+}
+.room-uuid-block {
+  display: flex;
+  justify-content: space-between;
+  img {
+    height: 25px;
+    cursor: pointer;
   }
+}
+.chats {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 40px;
+}
+.room-invite {
+  display: flex;
+  align-self: center;
 }
 
 .chat {
@@ -39,11 +83,11 @@
       outline: none;
       border: 4px solid rgba(120, 69, 172, 0.2);
     };
-
   }
 }
 .messages {
   max-height: 400px;
+  min-height: 190px;
   overflow-x: auto;
 }
 .message-row {
