--- a/src/chat/templates/chat/chat.html
+++ b/src/chat/templates/chat/chat.html
@@ -1,5 +1,5 @@
 {% extends 'layout/main.html' %}
-{% load sass_tags static %}
+{% load static sass_tags %}
 
 {% block pageTitle %} {{ title }} {% endblock pageTitle %}
 
@@ -34,55 +34,11 @@
         <div class="chats">
             <div>
                 <h3 class="text-center">My chats</h3>
-                {% if my_chats %}
-                    {% for chat in my_chats %}
-                        <div class="chat-info">
-                            <div class="chat-info-row">
-                                <div>Go to chat <span onclick="goToChat('{{ chat.uuid }}')" class="bold m-l-5 pointer">{{ chat.name }}</span></div>
-                                <div>
-                                    <div>Copy invite url </div>
-                                    <img onclick="copyToClipboard('{{ chat.uuid }}')" class="m-l-5" src="{% static 'shared/images/copy-icon.png' %}">
-                                </div>
-                            </div>
-                            <div class="chat-info-row">
-                                <div>
-                                    Created by:
-                                    <span class="bold m-l-5"> {{ chat.created_by }} </span>
-                                </div>
-                                <div>
-                                    Created at:
-                                    <span class="bold m-l-5"> {{ chat.created_at|date:"Y-m-d" }} </span>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                {% endif %}
+                {% include 'chat/chats-template.html' with chats=my_chats %}
             </div>
             <div>
                 <h3 class="text-center">All chats</h3>
-                {% if all_chats %}
-                    {% for chat in all_chats %}
-                        <div class="chat-info">
-                            <div class="chat-info-row">
-                                <div>Go to chat <span onclick="goToChat('{{ chat.uuid }}')" class="bold m-l-5 pointer">{{ chat.name }}</span></div>
-                                <div>
-                                    <div>Copy invite url </div>
-                                    <img onclick="copyToClipboard('{{ chat.uuid }}')" class="m-l-5" src="{% static 'shared/images/copy-icon.png' %}">
-                                </div>
-                            </div>
-                            <div class="chat-info-row">
-                                <div>
-                                    Created by:
-                                    <span class="bold m-l-5"> {{ chat.created_by }} </span>
-                                </div>
-                                <div>
-                                    Created at:
-                                    <span class="bold m-l-5"> {{ chat.created_at|date:"Y-m-d" }} </span>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                {% endif %}
+                {% include 'chat/chats-template.html' with chats=all_chats %}
             </div>
 
         </div>
