add beautiful soup4 oryx parser to track russian invasion vehicles losses for Ukraine ind russia

--- a/src/chat/templates/chat/chat.html
+++ b/src/chat/templates/chat/chat.html
@@ -1,20 +1,8 @@
-{% extends 'layout/main.html' %}
-{% load static sass_tags %}
+{% extends 'chat/main.html' %}
+{% load sass_tags static %}
 
-{% block pageTitle %} {{ title }} {% endblock pageTitle %}
 
-{% block headTags %}
-    <link href="{% sass_src 'chat/css/chat.scss' %}" rel="stylesheet" type="text/css"/>
-    <script>
-        let myName = '{{ user.username }}';
-        let user = {
-            name: '{{ user.username }}',
-            avatar: {% if user.userprofile.avatar %} '{{ user.userprofile.avatar.url }}' {% else %} '' {% endif %}
-        }
-    </script>
-{% endblock headTags %}
-
-{% block content %}
+{% block chat_content %}
     <div class="chat-content">
         <div>
             <h2 class="text-center">Create new chat</h2>
@@ -44,9 +32,4 @@
         </div>
 
     </div>
-{% endblock content %}
-
-
-{% block scripts %}
-    <script src="{% static 'chat/js/chat.js' %}"></script>
-{% endblock scripts %}
+{% endblock chat_content %}
