--- a/src/oryx_equipment_losses/static/oryx_equipment_losses/css/main.scss
+++ b/src/oryx_equipment_losses/static/oryx_equipment_losses/css/main.scss
@@ -1,5 +1,6 @@
 .reports-content {
   margin-top: 40px;
+  margin-bottom: 60px;
   display: flex;
   justify-content: space-between;
   .reports-side-block {
@@ -16,6 +17,7 @@
   }
   .category-name {
     font-weight: 600;
+    padding-top: 20px;
   }
   .vehicle{
     font-size: 13px;
@@ -89,6 +91,6 @@
   }
   ~ .accordion-item-content {
     max-height: unset;
-    padding: 1em;
+    padding: 0 1em 1em;
   }
 }
