--- a/src/oryx_equipment_losses/templates/oryx_equipment_losses/main.html
+++ b/src/oryx_equipment_losses/templates/oryx_equipment_losses/main.html
@@ -5,6 +5,8 @@
 
 {% block headTags %}
     <link href="{% sass_src 'oryx_equipment_losses/css/main.scss' %}" rel="stylesheet" type="text/css"/>
+    {% block oryx_head_tags %}
+    {% endblock oryx_head_tags %}
 {% endblock headTags %}
 
 {% block content %}
@@ -12,3 +14,7 @@
     {% endblock oryx_equipment_losses_content %}
 {% endblock content %}
 
+{% block scripts %}
+    {% block oryx_scripts %}
+    {% endblock oryx_scripts %}
+{% endblock scripts %}
