--- a/src/oryx_equipment_losses/templates/oryx_equipment_losses/statistics.html
+++ b/src/oryx_equipment_losses/templates/oryx_equipment_losses/statistics.html
@@ -19,6 +19,16 @@
                 <canvas id="lineChart"></canvas>
             </div>
         </div>
+        <div class="categories-statistics">
+            <div class="line-chart">
+                <canvas id="lineChart2"></canvas>
+            </div>
+        </div>
+        <div class="categories-statistics">
+            <div class="line-chart">
+                <canvas id="lineChart3"></canvas>
+            </div>
+        </div>
     </div>
 {% endblock oryx_equipment_losses_content %}
 
